# casacore

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MODERNIZATION_PLAN.md  WAVE0_WARNING_BASELINE.md  WAVE1_COVERAGE_BASELINE.md  WAVE1_COVERAGE_GAP_INVENTORY.md
.github/workflows/: linux.yml  osx.yml
build-tools/: casacore_assay  casacore_cov
casa/Arrays/test/: CMakeLists.txt
casa/BasicMath/: Primes.cc  Primes.h
casa/BasicMath/test/: CMakeLists.txt
casa/BasicSL/test/: CMakeLists.txt
casa/Containers/: Block.h  BlockCompat.h  BlockIO.h  BlockIO.tcc  RecordDescRep.cc  RecordDescRep.h  RecordRep.cc  RecordRep.h
casa/Containers/test/: CMakeLists.txt
casa/Exceptions/test/: CMakeLists.txt
casa/HDF5/test/: CMakeLists.txt
casa/IO/: AipsIO.h  BucketCache.cc  BucketCache.h  LockFile.cc  LockFile.h
casa/IO/test/: CMakeLists.txt
casa/Inputs/: Input.cc
casa/Inputs/test/: CMakeLists.txt
casa/Json/test/: CMakeLists.txt
casa/Logging/: MemoryLogSink.cc  MemoryLogSink.h
casa/Logging/test/: CMakeLists.txt
casa/OS/test/: CMakeLists.txt  tDOosCoverage.cc  tDirectory.cc
casa/Quanta/: Unit.cc
casa/Quanta/test/: CMakeLists.txt
casa/System/: Aipsrc.cc  Aipsrc.h
casa/System/test/: CMakeLists.txt  tAipsrc.run  tAipsrcValue.run  tAppInfo.cc  tAppInfo.run
casa/Utilities/: BitVector.cc  BitVector.h  CompositeNumber.cc  CompositeNumber.h  DynBuffer.h  GenSort.h  GenSort.tcc  LinearSearch.tcc  MUString.cc  MUString.h  Template.h  Template.tcc
casa/Utilities/test/: CMakeLists.txt
casa/test/: CMakeLists.txt
coordinates/Coordinates/: Coordinate.cc  FITSCoordinateUtil.cc
coordinates/Coordinates/test/: CMakeLists.txt
derivedmscal/DerivedMC/test/: CMakeLists.txt  tDerivedMSCal.run
docker/: py_wheel.docker  ubuntu2404_gcc_sisco.docker
fits/FITS/test/: CMakeLists.txt
images/Images/test/: CMakeLists.txt
images/Regions/test/: CMakeLists.txt  tImageRegion.cc
lattices/LEL/: LELFunction2.cc  LatticeExprNode.cc
lattices/LEL/test/: CMakeLists.txt
lattices/LRegions/: LCPolygon.cc
lattices/LRegions/test/: CMakeLists.txt
lattices/LatticeMath/test/: CMakeLists.txt  tLatticeStatistics.cc
lattices/Lattices/test/: CMakeLists.txt
meas/MeasUDF/test/: CMakeLists.txt
measures/Measures/test/: CMakeLists.txt  tMeasuresProxy.cc
measures/TableMeasures/test/: CMakeLists.txt
ms/MSOper/: MSConcat.cc  MSConcat.h  MSFlagger.cc  MSLister.cc  MSSummary.cc
ms/MSOper/test/: CMakeLists.txt
ms/MSSel/test/: CMakeLists.txt  tMSFeedGram.run
ms/MeasurementSets/: MSIter.cc
ms/MeasurementSets/test/: CMakeLists.txt
msfits/MSFits/: MSFitsOutput.cc  MSFitsOutput.h  MSFitsOutputAstron.cc  MSFitsOutputAstron.h
msfits/MSFits/test/: CMakeLists.txt
python3/: CMakeLists.txt
scimath/Fitting/test/: CMakeLists.txt  tLSQFit.cc  tLSQFit.out  tLSQaips.cc  tLSQaips.out
scimath/Functionals/test/: CMakeLists.txt
scimath/Mathematics/test/: CMakeLists.txt
scimath/StatsFramework/test/: CMakeLists.txt
tables/AlternateMans/test/: CMakeLists.txt
tables/DataMan/: ISMBucket.cc  ISMBucket.h  ISMColumn.cc  ISMColumn.h  ISMIndex.cc  ISMIndex.h  MSMColumn.cc  MSMColumn.h  SSMBase.cc  SSMBase.h  SSMDirColumn.cc  SSMIndex.cc  SSMIndex.h  StArrayFile.cc  TSMCube.h  TiledShapeStMan.cc  TiledShapeStMan.h  TiledStMan.cc  TiledStMan.h
tables/DataMan/test/: CMakeLists.txt  tISMBucketCoverage.cc  tStManColumnDispatch.cc  tStorageManagerCoverage.cc  tTiledStManCoverage.cc
tables/Dysco/: CMakeLists.txt
tables/LogTables/: LogFilterExpr.cc  LogFilterExpr.h
tables/LogTables/test/: CMakeLists.txt
tables/TaQL/: ExprAggrNode.cc  ExprAggrNode.h  ExprAggrNodeArray.cc  ExprAggrNodeArray.h  ExprConeNode.cc  ExprConeNode.h  ExprFuncNode.cc  ExprFuncNode.h  ExprFuncNodeArray.cc  ExprFuncNodeArray.h  ExprLogicNode.cc  ExprLogicNode.h  ExprNode.cc  ExprNode.h  ExprNodeArray.cc  ExprNodeArray.h  ExprNodeRecord.cc  ExprNodeRecord.h  ExprNodeRep.cc  ExprNodeRep.h  ExprNodeSetOpt.cc  RecordExpr.cc  TaQLJoin.cc  TaQLNodeHandler.cc  TableExprData.cc  TableExprData.h  TableParseProject.cc  TableParseProject.h  TableParseQuery.cc  TableParseQuery.h  TableParseUtil.cc  TableParseUtil.h
tables/TaQL/test/: CMakeLists.txt  tTableExprData.cc
tables/Tables/: BaseTabIter.cc  BaseTabIter.h  BaseTable.cc  BaseTable.h  ColDescSet.cc  ColDescSet.h  ColumnSet.cc  ColumnSet.h  ColumnsIndexArray.cc  ColumnsIndexArray.h  ConcatColumn.cc  ConcatColumn.h  ConcatRows.h  ConcatScalarColumn.tcc  ConcatTable.cc  ConcatTable.h  ExternalLockSync.cc  NullTable.cc  NullTable.h  PlainTable.cc  ReadAsciiTable.cc  RefTable.cc  RefTable.h  TabPath.cc  TabPath.h  Table.cc  Table.h  TableCopy.cc  TableCopy.h  TableIter.cc  TableIter.h  TableIterProxy.cc  TableProxy.cc  TableRecordRep.cc  TableSyncData.cc  TableSyncData.h
tables/Tables/test/: CMakeLists.txt  tBaseColumnPromotions.cc  tBaseTableCoverage.cc  tColumnSetCoverage.cc  tConcatTable.cc  tNullTable.cc  tPlainTableCoverage.cc  tRefTableCoverage.cc  tTableProxy.cc  tTableProxyAdvanced.cc
tables/apps/: showtablelock.cc  tomf.cc
